--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,3 +9,6 @@
 @using Sistema_Guarderia
 @using Sistema_Guarderia.Shared
 @using Sistema_Guarderia.Models
+@using Radzen
+@using Radzen.Blazor
+@using Extenciones
