--- a/Pages/Registros/RServicios.razor
+++ b/Pages/Registros/RServicios.razor
@@ -3,65 +3,77 @@
 
 @inject NotificationService notification
 
-<h3 class="text-center mt-5">Registrar servicio</h3>
+ <h3 class="text-center mt-5">Registrar servicio</h3>
 
-<EditForm Model="@servicio" OnValidSubmit="Guardar">
-  <div class="container mt-4">
-    <div class="card border-0 shadow-lg rounded-lg">
-      <div class="card-body rounded">
-        <div class="form-r ow align-items-center">
-          <div class="col-md-4">
-            <label>ServicioId</label>
-            <div class="input-group mb-3">
-              <InputNumber @bind-Value="servicio.ServicioId" class="form-control rounded-pill" />
-              <div class="input-group-append">
-                <div class="input-group-append">
-                  <button type="button" class="btn btn-primary input-group-text" @onclick="Buscar">Buscar</button>
+ <EditForm Model="@servicio" OnValidSubmit="Guardar">
+    <div class="card shadow-lg">
+        <div class="card">
+            <div class="card-header">
+                <h3 class="card-title">
+                    Registro de servicios
+                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                        class="bi bi-truck" viewBox="0 0 16 16">
+                        <path
+                            d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+                    </svg>
+                </h3>
+            </div>
+
+            <div class="card-body">
+                <hr>
+
+                <div class="row">
+                    <div class="col-3">
+                        <label>ServicioId</label>
+                        <div class="input-group">
+                            <InputNumber @bind-Value="servicio.ServicioId" class="form-control " />
+                            <div class="input-group-append">
+                                <button type="button" class="btn btn-lg btn-primary" @onclick="Buscar">Buscar</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-3">
+                        <label>Fecha Servicio</label>
+                        <InputDate @bind-Value="servicio.FechaServicio" class="form-control col-8 bg-fechasColor" />
+                    </div>
                 </div>
-              </div>
+
+                <div class="row">
+                    <div class="col-3">
+                        <label>Nombre Servicio</label>
+                        <InputText @bind-Value="servicio.NombreServicio" placeholder="Nombre Servicio" class="form-control" />
+                        <ValidationMessage For="@(() => servicio.NombreServicio)" />
+                    </div>
+
+                    <div class="col-3">
+                        <label>Precio Servicio</label>
+                        <InputNumber @bind-Value="servicio.PrecioServicio" class="form-control" />
+                        <ValidationMessage For="@(() => servicio.PrecioServicio)" />
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="col-md-4">
-            <div class="form-group">
-              <label>Fecha Servicio:</label>
-              <InputDate @bind-Value="servicio.FechaServicio" class="form-control rounded-pill" />
-              <ValidationMessage For="@(() => servicio.FechaServicio)" />
+        </div>
+
+        <div class="card-footer">
+            <div class="form-group text-left">
+                <button type="button" class="btn btn-lg btn-primary" @onclick="Nuevo" title="Nuevo servicio">
+                    <span class="oi oi-file"> Nuevo</span>
+                </button>
+
+                <button type="submit" class="btn btn-lg btn-success" title="Guardar servicio">
+                    <span class="oi oi-document"> Guardar</span>
+                </button>
+
+                <button type="button" class="btn btn-lg btn-danger" @onclick="Eliminar" title="Eliminar servicio">
+                    <span class="oi oi-trash"> Eliminar</span>
+                </button>
             </div>
-          </div>
         </div>
-        <div class="col-md-4">
-          <div class="form-group">
-            <label>Nombre Servicio:</label>
-            <InputText @bind-Value="servicio.NombreServicio" class="form-control rounded-pill" />
-            <ValidationMessage For="@(() => servicio.NombreServicio)" />
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <label>Precio Servicio</label>
-          <InputNumber @bind-Value="servicio.PrecioServicio" class="form-control rounded-pill" />
-          <ValidationMessage For="@(() => servicio.PrecioServicio)" />
-        </div>
-      </div>
-
-
-      <div class="card-footer">
-        <div class="mb-3 text-center" display: inline-block>
-          <button type="button" class="btn btn-lg btn-primary" @onclick="Nuevo">
-            <i class="oi oi-file" /> Nuevo
-          </button>
-          <button type="submit" class="btn btn-lg btn-success">
-            <i class="oi oi-document" /> Guardar
-          </button>
-          <button type="button" class="btn btn-lg btn-danger" @onclick="Eliminar">
-            <i class="oi oi-trash" /> Eliminar
-          </button>
-        </div>
-      </div>
     </div>
-  </div>
-
 </EditForm>
+
+
 @code {
 
   [Parameter]
@@ -98,7 +110,7 @@
   void Nuevo()
   {
     this.servicio = new Servicio();
-    //notificacion.ShowNotification("Nueva plantilla.", NotificationSeverity.Success);
+     notification.ShowNotification("Nueva plantilla", NotificationSeverity.Success);
 
   }
   void Guardar()
@@ -106,11 +118,11 @@
     if (serviciosBLL.Guardar(servicio))
     {
       Nuevo();
-      // notificacion.ShowNotification("Guardado correctamente.");
+      notification.ShowNotification("Guardado correctamente.");
     }
     else
     {
-      // notificacion.ShowNotification("No fue guardado.", NotificationSeverity.Error);
+       notification.ShowNotification("No fue guardado.", NotificationSeverity.Error);
     }
   }
   void Eliminar()
