--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,6 +24,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Registrar Servicios
             </NavLink>
         </div>
+
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="R_Clientes">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Registrar Clientes
+            </NavLink>
+        </div>
     </nav>
 </div>
 
