--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -30,6 +30,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Registrar Clientes
             </NavLink>
         </div>
+
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="C_Inscripcion">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta de Inscripcion
+            </NavLink>
+        </div>
     </nav>
 </div>
 
