--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -36,6 +36,18 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta de Inscripcion
             </NavLink>
         </div>
+
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="C_Clientes">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta de Clientes
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="C_Servicios">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta de Servicios
+            </NavLink>
+        </div>
     </nav>
 </div>
 
