--- a/Pages/Registros/R_Inscripcion.razor
+++ b/Pages/Registros/R_Inscripcion.razor
@@ -4,122 +4,135 @@
 @inject NotificationService notification
 
 <RadzenForm Model="@inscripcion" Submit="@Guardar">
-    <RadzenCard Class="mt-4 shadow border border-3" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">
-        <RadzenCard class="shadow border border-3" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">
-            <h3 class="text-center mt-5" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">Formulario de
-                Inscripción</h3>
+    <div class="d-flex justify-content-center">
+        <RadzenCard Class="shadow border border-3" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">
+            <RadzenCard class="shadow border border-3" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">
+                <h3 class="text-center" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">Formulario de
+                    Inscripción</h3>
+            </RadzenCard>
+            <dl />
+            <RadzenCard class="shadow border border-3" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">
+                <div class="row" Style="animation: slideInLeft 0.5s; animation-delay: 0.2s;">
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Fecha:" />
+                        <RadzenDatePicker @bind-Value="inscripcion.Fecha" Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="La fecha es obligatoria" Component="inscripcion.Fecha" />
+                    </div>
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Nombre:" />
+                        <RadzenTextBox @bind-Value="inscripcion.Nombre" Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="El nombre es obligatorio" Component="inscripcion.Nombre" />
+                    </div>
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Fecha de Nacimiento:" />
+                        <RadzenDatePicker @bind-Value="inscripcion.FechaNacimiento"
+                            Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="La fecha de nacimiento es obligatoria"
+                            Component="inscripcion.FechaNacimiento" />
+                    </div>
+                </div>
+                <div class="row" Style="animation: slideInLeft 0.5s; animation-delay: 0.2s;">
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Dirección:" />
+                        <RadzenTextBox @bind-Value="inscripcion.Direccion" Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="La dirección es obligatoria" Component="inscripcion.Direccion" />
+                    </div>
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Nombre de la Madre:" />
+                        <RadzenTextBox @bind-Value="inscripcion.NombreMadre" Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="El nombre de la madre es obligatorio"
+                            Component="inscripcion.NombreMadre" />
+                    </div>
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Teléfono de la Madre:" />
+                        <RadzenTextBox @bind-Value="inscripcion.TelefonoMadre" Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="El teléfono de la madre es obligatorio"
+                            Component="inscripcion.TelefonoMadre" />
+                    </div>
+                </div>
+                <div class="row" Style="animation: slideInLeft 0.5s; animation-delay: 0.2s;">
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Lugar de Trabajo de la Madre:" />
+                        <RadzenTextBox @bind-Value="inscripcion.LugarDeTrabajoMadre"
+                            Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="El lugar de trabajo de la madre es obligatorio"
+                            Component="inscripcion.LugarDeTrabajoMadre" />
+                    </div>
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Nombre del Padre:" />
+                        <RadzenTextBox @bind-Value="inscripcion.NombrePadre" Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="El nombre del padre es obligatorio"
+                            Component="inscripcion.NombrePadre" />
+                    </div>
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Teléfono del Padre:" />
+                        <RadzenTextBox @bind-Value="inscripcion.TelefonoPadre" Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="El teléfono del padre es obligatorio"
+                            Component="inscripcion.TelefonoPadre" />
+                    </div>
+                </div>
+                <div class="row" Style="animation: slideInLeft 0.5s; animation-delay: 0.2s;">
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Lugar de Trabajo del Padre:" />
+                        <RadzenTextBox @bind-Value="inscripcion.LugarDeTrabajoPadre"
+                            Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="El lugar de trabajo del padre es obligatorio"
+                            Component="inscripcion.LugarDeTrabajoPadre" />
+                    </div>
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Seguro Médico:" />
+                        <RadzenTextBox @bind-Value="inscripcion.SeguroMedico" Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="El seguro médico es obligatorio"
+                            Component="inscripcion.SeguroMedico" />
+                    </div>
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Nombre del Pediatra:" />
+                        <RadzenTextBox @bind-Value="inscripcion.NombrePediatra" Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="El nombre del pediatra es obligatorio"
+                            Component="inscripcion.NombrePediatra" />
+                    </div>
+                </div>
+                <div class="row" Style="animation: slideInLeft 0.5s; animation-delay: 0.2s;">
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Lugar de Trabajo del Pediatra:" />
+                        <RadzenTextBox @bind-Value="inscripcion.LugarDeTrabajoPediatra"
+                            Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="El lugar de trabajo del pediatra es obligatorio"
+                            Component="inscripcion.LugarDeTrabajoPediatra" />
+                    </div>
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Caso de Emergencia:" />
+                        <RadzenTextBox @bind-Value="inscripcion.CasoDeEmergencia"
+                            Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="El caso de emergencia es obligatorio"
+                            Component="inscripcion.CasoDeEmergencia" />
+                    </div>
+                    <div class="col-md-4">
+                        <RadzenLabel Text="Padecimientos:" />
+                        <RadzenTextBox @bind-Value="inscripcion.Padece" Class="rounded-pill custom-animation" />
+                        <RadzenRequiredValidator Text="Los padecimientos son obligatorios"
+                            Component="inscripcion.Padece" />
+                    </div>
+                </div>
+                <div class="text-center mt-4">
+                    <button type="button" class="btn btn-lg btn-primary rounded-lg custom-animation"
+                        Style="animation: fadeIn 0.5s; animation-delay: 0.1s" @onclick="Nuevo" title="Nuevo servicio">
+                        <span class="oi oi-file"> Nuevo</span>
+                    </button>
+                    <button type="button" class="btn btn-lg btn-success rounded-lg custom-animation"
+                        Style="animation: fadeIn 0.5s; animation-delay: 0.1s" @onclick="Guardar"
+                        title="Guardar servicio">
+                        <span class="oi oi-document"> Guardar</span>
+                    </button>
+                    <button type="button" class="btn btn-lg btn-danger rounded-lg custom-animation"
+                        Style="animation: fadeIn 0.5s; animation-delay: 0.1s" @onclick="Eliminar"
+                        title="Eliminar servicio">
+                        <span class="oi oi-trash"> Eliminar</span>
+                    </button>
+                </div>
+            </RadzenCard>
         </RadzenCard>
-        <dl/>
-        <RadzenCard class="shadow border border-3" Style="animation: slideInLeft 0.5s; animation-delay: 0.1s;">
-            <div class="row" Style="animation: slideInLeft 0.5s; animation-delay: 0.2s;">
-                <div class="col-md-4">
-                    <RadzenLabel Text="Fecha:" />
-                    <RadzenDatePicker @bind-Value="inscripcion.Fecha" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="La fecha es obligatoria" Component="inscripcion.Fecha" />
-                </div>
-                <div class="col-md-4">
-                    <RadzenLabel Text="Nombre:" />
-                    <RadzenTextBox @bind-Value="inscripcion.Nombre" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="El nombre es obligatorio" Component="inscripcion.Nombre" />
-                </div>
-                <div class="col-md-4">
-                    <RadzenLabel Text="Fecha de Nacimiento:" />
-                    <RadzenDatePicker @bind-Value="inscripcion.FechaNacimiento" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="La fecha de nacimiento es obligatoria"
-                        Component="inscripcion.FechaNacimiento" />
-                </div>
-            </div>
-            <div class="row" Style="animation: slideInLeft 0.5s; animation-delay: 0.2s;">
-                <div class="col-md-4">
-                    <RadzenLabel Text="Dirección:" />
-                    <RadzenTextBox @bind-Value="inscripcion.Direccion" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="La dirección es obligatoria" Component="inscripcion.Direccion" />
-                </div>
-                <div class="col-md-4">
-                    <RadzenLabel Text="Nombre de la Madre:" />
-                    <RadzenTextBox @bind-Value="inscripcion.NombreMadre" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="El nombre de la madre es obligatorio"
-                        Component="inscripcion.NombreMadre" />
-                </div>
-                <div class="col-md-4">
-                    <RadzenLabel Text="Teléfono de la Madre:" />
-                    <RadzenTextBox @bind-Value="inscripcion.TelefonoMadre" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="El teléfono de la madre es obligatorio"
-                        Component="inscripcion.TelefonoMadre" />
-                </div>
-            </div>
-            <div class="row" Style="animation: slideInLeft 0.5s; animation-delay: 0.2s;">
-                <div class="col-md-4">
-                    <RadzenLabel Text="Lugar de Trabajo de la Madre:" />
-                    <RadzenTextBox @bind-Value="inscripcion.LugarDeTrabajoMadre"
-                        Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="El lugar de trabajo de la madre es obligatorio"
-                        Component="inscripcion.LugarDeTrabajoMadre" />
-                </div>
-                <div class="col-md-4">
-                    <RadzenLabel Text="Nombre del Padre:" />
-                    <RadzenTextBox @bind-Value="inscripcion.NombrePadre" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="El nombre del padre es obligatorio"
-                        Component="inscripcion.NombrePadre" />
-                </div>
-                <div class="col-md-4">
-                    <RadzenLabel Text="Teléfono del Padre:" />
-                    <RadzenTextBox @bind-Value="inscripcion.TelefonoPadre" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="El teléfono del padre es obligatorio"
-                        Component="inscripcion.TelefonoPadre" />
-                </div>
-            </div>
-            <div class="row" Style="animation: slideInLeft 0.5s; animation-delay: 0.2s;">
-                <div class="col-md-4">
-                    <RadzenLabel Text="Lugar de Trabajo del Padre:" />
-                    <RadzenTextBox @bind-Value="inscripcion.LugarDeTrabajoPadre"
-                        Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="El lugar de trabajo del padre es obligatorio"
-                        Component="inscripcion.LugarDeTrabajoPadre" />
-                </div>
-                <div class="col-md-4">
-                    <RadzenLabel Text="Seguro Médico:" />
-                    <RadzenTextBox @bind-Value="inscripcion.SeguroMedico" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="El seguro médico es obligatorio"
-                        Component="inscripcion.SeguroMedico" />
-                </div>
-                <div class="col-md-4">
-                    <RadzenLabel Text="Nombre del Pediatra:" />
-                    <RadzenTextBox @bind-Value="inscripcion.NombrePediatra" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="El nombre del pediatra es obligatorio"
-                        Component="inscripcion.NombrePediatra" />
-                </div>
-            </div>
-            <div class="row" Style="animation: slideInLeft 0.5s; animation-delay: 0.2s;">
-                <div class="col-md-4">
-                    <RadzenLabel Text="Lugar de Trabajo del Pediatra:" />
-                    <RadzenTextBox @bind-Value="inscripcion.LugarDeTrabajoPediatra"
-                        Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="El lugar de trabajo del pediatra es obligatorio"
-                        Component="inscripcion.LugarDeTrabajoPediatra" />
-                </div>
-                <div class="col-md-4">
-                    <RadzenLabel Text="Caso de Emergencia:" />
-                    <RadzenTextBox @bind-Value="inscripcion.CasoDeEmergencia" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="El caso de emergencia es obligatorio"
-                        Component="inscripcion.CasoDeEmergencia" />
-                </div>
-                <div class="col-md-4">
-                    <RadzenLabel Text="Padecimientos:" />
-                    <RadzenTextBox @bind-Value="inscripcion.Padece" Class="rounded-pill custom-animation" />
-                    <RadzenRequiredValidator Text="Los padecimientos son obligatorios" Component="inscripcion.Padece" />
-                </div>
-            </div>
-            <div class="text-center mt-4">
-                <RadzenButton TextStyle="TextStyle.H2" Text="Guardar" Class="rounded-lg custom-animation"
-                    Style="animation: fadeIn 0.5s; animation-delay: 0.1s;" />
-                <RadzenButton Text="Eliminar" Class="rounded-lg custom-animation"
-                    Style="animation: fadeIn 0.5s; animation-delay: 0.1s;" />
-                <RadzenButton Text="Nuevo" Class="rounded-lg custom-animation"
-                    Style="animation: fadeIn 0.5s; animation-delay: 0.1s;" />
-            </div>
-        </RadzenCard>
-    </RadzenCard>
+    </div>
 </RadzenForm>
 
 
@@ -127,7 +140,7 @@
     [Parameter]
     public int InscripcionId { get; set; }
     private Inscripcion inscripcion = new Inscripcion();
-    
+
     protected override void OnInitialized()
     {
         if (InscripcionId > 0)
@@ -153,35 +166,34 @@
         }
     }
     void Buscar()
-  {
-    var encontrado = inscripcionBLL.Buscar(inscripcion.InscripcionId);
-    if (encontrado != null)
     {
-      inscripcion = encontrado;
-      this.inscripcion = encontrado;
-      notification.ShowNotification("Registro encontrado", NotificationSeverity.Success);
+        var encontrado = inscripcionBLL.Buscar(inscripcion.InscripcionId);
+        if (encontrado != null)
+        {
+            inscripcion = encontrado;
+            this.inscripcion = encontrado;
+            notification.ShowNotification("Registro encontrado", NotificationSeverity.Success);
+        }
+        else
+        {
+            notification.ShowNotification("Registro no encontrado", NotificationSeverity.Warning);
+        }
     }
-    else
+    void Nuevo()
     {
-      notification.ShowNotification("Registro no encontrado", NotificationSeverity.Warning);
+        this.inscripcion = new Inscripcion();
+        notification.ShowNotification("Nueva plantilla.", NotificationSeverity.Success);
     }
-  }
-  void Nuevo()
-  {
-    this.inscripcion = new Inscripcion();
-    //notificacion.ShowNotification("Nueva plantilla.", NotificationSeverity.Success);
-
-  }
-  void Eliminar()
-  {
-    if (inscripcionBLL.Eliminar(inscripcion.InscripcionId))
+    void Eliminar()
     {
-      Nuevo();
-      notification.ShowNotification("Eliminado correctamente.");
+        if (inscripcionBLL.Eliminar(inscripcion.InscripcionId))
+        {
+            Nuevo();
+            notification.ShowNotification("Eliminado correctamente.");
+        }
+        else if (inscripcion.InscripcionId == 0)
+        {
+            notification.ShowNotification("No fue eliminado.", NotificationSeverity.Error);
+        }
     }
-    else if(inscripcion.InscripcionId == 0)
-    {
-      notification.ShowNotification("No fue eliminado.", NotificationSeverity.Error);
-    }
-  }
 }
